--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
     "start_url": "/?utm_source=homescreen",
     "icons": [
       {
-        "src": "vite.svg",
+        "src": "public/favicon.ico",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "any"
       },
       {
-        "src": "vite.svg",
+        "src": "public/favicon.ico",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "any"
