--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+dev-dist
 node_modules
 dist
 dist-ssr
 *.local
-dev-dist/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
